# AoC24

./: .gitignore
Day_01/: CMakeLists.txt  main.cpp
Day_02/: CMakeLists.txt  main.cpp
Day_03/: CMakeLists.txt  main.cpp
